--- a/index.html
+++ b/index.html
@@ -880,12 +880,12 @@
                 </div>
             </div>
             <div class="box footer-gallery">
-                <img src="/imgs/gallery-01.png" alt="">
-                <img src="/imgs/gallery-02.png" alt="">
-                <img src="/imgs/gallery-03.jpg" alt="">
-                <img src="/imgs/gallery-04.png" alt="">
-                <img src="/imgs/gallery-05.jpg" alt="">
-                <img src="/imgs/gallery-06.png" alt="">
+                <img src="../imgs/gallery-01.png" alt="">
+                <img src="../imgs/gallery-02.png" alt="">
+                <img src="../imgs/gallery-03.jpg" alt="">
+                <img src="../imgs/gallery-04.png" alt="">
+                <img src="../imgs/gallery-05.jpg" alt="">
+                <img src="../imgs/gallery-06.png" alt="">
             </div>
         </div>
         <p class="copyright">Made With &lt;3 By <span>Yousef-Pro</span> Studio</p>
